# Bookvoice

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  windows-release.yml
bookvoice/: __init__.py  __main__.py  cli.py  cli_rendering.py  cli_runtime.py  config.py  credentials.py  errors.py  parsing.py  pipeline.py  pipeline_artifacts.py  pipeline_costs.py  pipeline_resume.py  provider_factory.py  runtime_tools.py
bookvoice/audio/: __init__.py  merger.py  packaging.py  postprocess.py  tags.py
bookvoice/io/: __init__.py  chapter_splitter.py  epub_exporter.py  epub_text_extractor.py  pdf_exporter.py  pdf_outline_extractor.py  pdf_text_extractor.py  storage.py
bookvoice/llm/: __init__.py  audio_rewriter.py  cache.py  openai_client.py  prompts.py  rate_limiter.py  translator.py
bookvoice/models/: __init__.py  datatypes.py
bookvoice/pipeline/: __init__.py  artifacts.py  chapter_scope.py  costs.py  execution.py  manifesting.py  orchestrator.py  reader_exports.py  resume.py  runtime.py  telemetry.py
bookvoice/telemetry/: __init__.py  cost_tracker.py  logger.py
bookvoice/text/: __init__.py  chapter_selection.py  chunking.py  cleaners.py  normalizer.py  segment_planner.py  slug.py  structure.py
bookvoice/tts/: __init__.py  synthesizer.py  voices.py
docs/: ARCHITECTURE.md  ARTIFACTS.md  MODULES.md  ROADMAP.md  WINDOWS_INNO_SETUP.md  WINDOWS_PYINSTALLER.md  WINDOWS_USER_GUIDE.md
docs/uml/: README.md  chapter-chunk-activity.puml  component-overview.puml  domain-model.puml  pipeline-sequence.puml
project/: README.md
project/backlog/: 2026-02-20-task-001-mvp-thin-vertical-slice.md  2026-02-20-task-002-filesystem-artifact-store.md  2026-02-20-task-003-text-pdf-extractor.md  2026-02-20-task-004-simple-chapter-split-and-chunking.md  2026-02-20-task-005-minimal-translation-rewrite-path.md  2026-02-20-task-006-minimal-tts-provider-path.md  2026-02-20-task-007-merge-and-manifest-output.md  2026-02-20-task-008-basic-resume-from-manifest.md  2026-02-20-task-009-minimal-error-surface-in-cli.md  2026-02-20-task-010-smoke-test-build-command.md  2026-02-20-task-011-cost-summary-in-manifest.md  2026-02-20-task-012-post-mvp-hardening-cache-retry-rate-limit.md  2026-02-21-task-013-pdf-outline-chapter-extraction-with-text-fallback.md  2026-02-21-task-014-real-provider-integration-llm-tts.md  2026-02-21-task-014a-provider-abstraction-and-config-foundation.md  2026-02-21-task-014b-cli-credentials-model-selection-and-secure-storage.md  2026-02-21-task-014c-real-openai-llm-integration-translate-rewrite.md  2026-02-21-task-014d-real-openai-tts-integration.md  2026-02-21-task-014e-provider-error-surface-and-cli-diagnostics.md  2026-02-21-task-014f-provider-integration-test-matrix.md  2026-02-21-task-015-online-model-pricing-for-cost-tracker.md  2026-02-21-task-016-cli-chapters-only-mode.md  2026-02-21-task-017-cli-list-book-chapters.md  2026-02-21-task-018-cli-process-selected-chapters.md  2026-02-21-task-019-build-progress-indicator-and-stage-logging.md  2026-02-21-task-021-limit-audio-part-duration-to-10-minutes.md  2026-02-21-task-022-standardize-audio-filename-chapter-part-title.md  2026-02-21-task-023-enforce-sentence-complete-chunk-boundaries.md  2026-02-21-task-024-structure-extraction-for-chapter-and-subchapter-audio-planning.md  2026-02-22-task-034-real-translate-only-command.md  (+22 more)
tests/: README.md  __init__.py  conftest.py  fixture_paths.py  test_build_command.py  test_chapter_selection.py  test_chapter_splitter_and_chunking.py  test_cli_error_handling.py  test_list_chapters_command.py  test_pdf_outline_chapter_extraction.py  test_provider_factory_and_config.py  test_resume_command.py  test_smoke.py
(+136 files in other folders)
