[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "bookvoice"
version = "0.1.0"
description = "Deterministic pipeline scaffold for converting PDF books into Czech audiobook outputs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Bookvoice Contributors" }
]
keywords = ["audiobook", "pdf", "tts", "pipeline", "czech"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = []

[project.scripts]
bookvoice = "bookvoice.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bookvoice"]
