[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "bookvoice"
version = "0.8.40"
description = "Deterministic pipeline scaffold for converting PDF books into Czech audiobook outputs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Bookvoice Contributors" }
]
keywords = ["audiobook", "pdf", "tts", "pipeline", "czech"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "typer>=0.12,<1.0",
  "pypdf (>=6.7.1,<7.0.0)",
  "keyring>=25.6.0,<26.0.0",
  "loguru>=0.7.2,<1.0.0",
  "requests>=2.32.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "mypy>=1.11,<2.0",
  "pytest-mypy>=0.10,<1.0"
]

[project.scripts]
bookvoice = "bookvoice.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bookvoice"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
addopts = "-vvv -q --cov=bookvoice --cov-report=term-missing --mypy"

[tool.mypy]
python_version = "3.11"
files = ["bookvoice", "tests"]
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
